# photography-mind

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  history.txt
docs/: MCP-FIXES-2025-12-10.md  PLANNING.md
docs/AGENTS/: arch.md  connections.md  maintenance.md  roadmap.md  setup.md  todo.md  tools.md
docs/photography-information/: contacts-2025-11-26.csv  import_csvs.py
docs/photography-information/2025/: monthly-sales-2025-all_sales-all_galleries.csv  orders-from-2025-01-01-to-2025-12-31.csv  ordersfiles-from-2025-01-01-to-2025-12-31.csv
docs/photography-information/2025 Fall Fling/: FallFling-SkaterTracking.md  fall_fling_complete_roster.csv  fall_fling_requested.csv
docs/photography-information/2025 Pony Express/: SkaterRequests.md
docs/photography-information/All Time/: items-report-from-2023-04-04-to-2025-11-25.csv
docs/photography-information/backups/: photography_backup_20251125_192213.surql
docs/photography-information/forms/website-forms/: competitions.json  shared.js
docs/photography-information/forms/website-forms/competition-signup/: index-enhanced.html  index.html
docs/photography-information/forms/website-forms/contact/: LICENSE  index.html
src/: config.rs  db.rs  lib.rs  router.rs  server.rs
src/photography/: commands.rs  models.rs  utils.rs
