[package]
name = "photography-mind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
prettytable = "0.10"
surrealdb = { version = "2.0", features = ["protocol-ws"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []
